force-app/main/default/objects/Org_Limits_Monitoring__c/Org_Limits_Monitoring__c.object-meta.xml
<CustomObject>
    <label>Org Limits Monitoring</label>
    <nameField>
        <label>Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Org Limits Monitoring</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>