force-app/main/default/objects/Org_Limits_Monitoring__c/fields/Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type__c</fullName>
    <label>Limit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>File Storage</fullName>
            </value>
            <value>
                <fullName>Daily APIs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>