force-app/main/default/objects/Org_Limits_Monitoring__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <formula>IF(AND(Remaining__c=0,Max__c=0),0,(Remaining__c/Max__c)*100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>