force-app/main/default/objects/Org_Limits_Monitoring__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Limit_Type__c</columns>
    <columns>Remaining__c</columns>
    <columns>Max__c</columns>
    <columns>Percentage__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>